# cavity_modeling

./: .gitignore  compute_continuity_3d.py  config.json  eigenvalues.py  generate_fault.py  hhh.py  my_segyio.py  pyproject.toml  seismic_attribute.py  seismic_plot.py  seismic_wavelet_processor.py  test.py  vmd.py  wlrpca.py
attention_unet/: build_train_data.py  dataset.py  model.py  precompute_patches.py  predict.py  predict_attention_unet.py  train.py  train_attention_unet.py
attribute/: amplitude_gradient.py  eigenvalues.py  rms.py
domin_convert/: depth2time.py
io/: my_segyio.py
label/: make_label.py
myio/: config.json  my_segyio.py  read_horizon.py
plot/: containers_plot.py  mian_plot.py  plot_mian.py  seismic_plot.py
reflection_separation/: reflection_separation_2d.py  reflection_separation_3d.py
structure_oriented_filter/: atribute_structure_oriented_filter_2d.py  structure_oriented_filter_2d.py  structure_oriented_filter_3d.py  test.py
utils/: 2_perform_crossplot_batch.py  batch_extract_slices.py  create_label_mask.py  data_viewer.py  show_3d.py
wavelet/: analyze_seismic_spectrum_3d.py  build_ricker_dictionary.py  main_reconstruct.py  pca_background_removal.py  seismic_wavelet_processor.py
wlrpca/: wlrpca_2d.py
