[tool.poetry]
name = "fuman"
version = "0.1.0"
description = ""
authors = ["Qiao <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
segyio = "^1.9.13"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
numba = "^0.61.0"
scipy = "^1.15.2"
pandas = "^2.2.3"
pywavelets = "^1.8.0"
opencv-python = "^4.11.0.86"
numpy = "^2.2.6"
scikit-image = "^0.25.2"
vmdpy = "^0.2"
requests = "^2.32.4"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
