[tool.poetry]
name = "cavity_modeling"
version = "0.1.0"
description = ""
authors = ["Qiao <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
segyio = "^1.9.13"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
numba = "^0.61.0"
pandas = "^2.2.3"
pywavelets = "^1.8.0"
opencv-python = "^4.11.0.86"
numpy = "^2.2.6"
scikit-image = "^0.25.2"
requests = "^2.32.4"
bs4 = "^0.0.2"
dependency-injector = "^4.48.1"
bruges = "^0.5.4"
napari = {extras = ["all"], version = "^0.6.2"}
pyqt5 = "^5.15.11"
monai = "^1.5.0"
pytorch-lightning = "^2.5.2"
torch = {version = "2.6.0", source = "pytorch-cu126"}
torchvision = {version = "0.21.0", source = "pytorch-cu126"}
torchaudio = {version = "2.6.0", source = "pytorch-cu126"}
scikit-learn = "^1.7.1"
vmdpy = "^0.2"
scipy = "^1.16.1"


[[tool.poetry.source]]
name = "pytorch_cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
